--- a/python.html
+++ b/python.html
@@ -267,7 +267,7 @@ print("Bonjour ",nom);</pre>
 else :
   instructions</pre>
 
-    <h4>Particularité de Python</h4>
+    <h4>Particularités de Python</h4>
 
     <p>L'instruction <strong>elif</strong> est la contraction de l'instruction <strong>else if</strong>.</p>
 
@@ -277,22 +277,8 @@ elif condition :
   instructions
 else :
   instructions</pre>
-
-    <h4>L'instruction switch</h4>
-
-    <pre>switch(maVariable){
-  case valeur1:
-    instruction;
-    break;
-  case valeur2:
-    instruction;
-    break;
-  case valeur3:
-    instruction;
-    break;
-  default:
-    instruction;
-}</pre>
+    
+    <p>L'instruction <strong>switch</strong> n'existe pas de façon native en Python.</p>
 
   <hr>
 
@@ -303,7 +289,7 @@ else :
     <h4>La boucle while</h4>
 
     <pre>while condition :
-  instructions;</pre>
+  instructions</pre>
 
     <h4>La boucle for</h4>
 
