--- a/javascript.html
+++ b/javascript.html
@@ -19,8 +19,7 @@
 <div id="bandeau">
   <div id="titre"> <h1> Memento </h1> </div>
   <nav>
-    <div class="element"> <a href="index.html">GENERALITES</a> </div>
-    <div class="element"> <a href="html.html">HTML</a> </div>
+    <div class="element"> <a href="index.html">HTML</a> </div>
     <div class="element"> <a href="css.html">CSS</a> </div>
     <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
     <div class="element"> <a href="python.html">PYTHON</a> </div>
