rajout explications sur les techniques utilisées en C

--- a/git.html
+++ b/git.html
@@ -70,7 +70,10 @@
   <tr> <td> créer le fichier <em>monFichier</em> </td> <td> <pre>touch monFichier</pre></td> </tr>
   <tr> <td> créer le dossier <em>monDossier</em> </td> <td> <pre>mkdir monDossier</pre></td> </tr>
   <tr> <td> vider le terminal <em>monFichier</em> </td> <td> <pre>clear</pre></td> </tr>
+  <tr> <td> ouvrir le monFichier qui se trouve dans le répertoire courant </td> <td> <pre>./monFichier</pre></td> </tr>
 </table>
+
+<p>Attention, pour ouvrir un fichier du répertoire courant, l'appel direct de monFichier est insuffisant. Il faut d'abord rajouter le chemin local, qui force la connexion.</p>
 
 <hr>
 
